# AOM-Agent

./: .gitignore  README.md  aom_roadmap.tsx  pyproject.toml  requirements.txt  setup_database.sh
Agent_Architecture/src/: App.tsx
Project_Design_UI/: package-lock.json  package.json
agents/: app.py
app/: main.py  requirements.txt
app/agents/: app.py  chroma_db_test.py
app/controllers/: agent_controller.py
app/db/: db.py
app/model/: chat.py
app/routers/: __init__.py  agents.py
app/schemas/: agents.py
app/services/: agent_services.py
