[project]
name = "aom-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Muhammad Saqlain",email = "msaqlain.official05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "langchain (>=1.2.4,<2.0.0)",
    "langgraph (>=1.0.6,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
